testsuite/tests/typecheck/should_fail/T23427.stderr

T23427.hs:10:7: error: [GHC-39999]
    • Could not deduce ‘C t0’
        arising when matching required constraints
        in a group involving ‘doTail’
      from the context: C a
        bound by the type signature for:
                   indent :: forall a. C a => a -> a
        at T23427.hs:7:1-23
      The type variable ‘t0’ is ambiguous
    • In an equation for ‘indent’:
          indent n
            = doText n
            where
                doText x = const (f x) doTail
                doTail _ = const n doText

T23427.hs:15:1: error: [GHC-39999]
    Could not deduce ‘Fractional a’
      arising when matching required constraints
      in a group involving ‘x’
    from the context: Num a
      bound by the inferred type for ‘x’:
                 forall a. Num a => a
      at T23427.hs:15:1-19
